updates to feature type mapping

--- a/src/main/webapp/subPages/radarCharts/RadarChart.html
+++ b/src/main/webapp/subPages/radarCharts/RadarChart.html
@@ -506,7 +506,7 @@
                             <OPTION value="Updates applied to transaction log before returning from write">Updates applied to transaction log before returning from write</OPTION>
                             <OPTION value="Specify Quorum reads and writes">Specify Quorum Reads/Writes</OPTION>
                             <OPTION value="Specify number of replicas to write to">Specify number of replicas to write to</OPTION>
-                            <OPTION value="Behaviour when write cannot complete on specified number of replicas">Behaviour when write cannot complete on specified number of replicas</OPTION>
+                            <OPTION value="Behaviour when write cannot complete on specified number of replicas">Behaviour when write cannot complete</OPTION>
                             <OPTION value="Specify number of replicas to read from">Specify number of replicas to read from</OPTION>
                             <OPTION value="Read from replica master only">Read from replica master only</OPTION>
                             <OPTION value="Object level timestamps to detect conflicts">Object level timestamps to detect conflicts</OPTION>
@@ -532,8 +532,8 @@
                         <select class="form-control" multiple="" id="data_model"
                                 name="data_model">
                             <OPTION value="Scalable Request Processing Architecture">Enforced Schema</OPTION>
-                            <OPTION value="Opaque Data Objects (need application interpretation)">Opaque Data Objects (need application interpretation)</OPTION>
-                            <OPTION value="Hierarchical Data Objects (e.g. sub objects)">Hierarchical Data Objects (e.g. sub objects)</OPTION>
+                            <OPTION value="Opaque Data Objects (need application interpretation)">Opaque Data Objects</OPTION>
+                            <OPTION value="Hierarchical Data Objects (e.g. sub objects)">Hierarchical Data Objects</OPTION>
                             <OPTION value="Automatically Allocated Keys">Automatically Allocated Keys</OPTION>
                             <OPTION value="Composite Keys">Composite Keys</OPTION>
                             <OPTION value="Secondary Indexes">Secondary Indexes</OPTION>
@@ -541,7 +541,7 @@
                             <OPTION value="Query by Partial Key">Query by Partial Key</OPTION>
                             <OPTION value="Query by Non-keyed Values">Query by Non-keyed Values</OPTION>
                             <OPTION value="Map Reduce API">Map Reduce API</OPTION>
-                            <OPTION value="Indexed Text Search">Indexed Text Search</OPTION>
+                            <!--<OPTION value="Indexed Text Search">Indexed Text Search</OPTION>-->
                         </select>
                     </form>
                 </div>
