Updates to the rest of the features

--- a/src/main/webapp/subPages/radarCharts/RadarChart.html
+++ b/src/main/webapp/subPages/radarCharts/RadarChart.html
@@ -503,7 +503,7 @@
                             <OPTION value="Object-Level isolation on updates">Object-Level isolation on updates</OPTION>
                             <OPTION value="ACID transactions in single database">ACID transactions in single database</OPTION>
                             <OPTION value="Distributed ACID transactions">Distributed ACID transactions</OPTION>
-                            <OPTION value="Updates applied to transaction log before returning from write">Updates applied to transaction log before returning from write</OPTION>
+                            <OPTION value="Updates applied to transaction log before returning from write">Updates applied before returning from write</OPTION>
                             <OPTION value="Specify Quorum reads and writes">Specify Quorum Reads/Writes</OPTION>
                             <OPTION value="Specify number of replicas to write to">Specify number of replicas to write to</OPTION>
                             <OPTION value="Behaviour when write cannot complete on specified number of replicas">Behaviour when write cannot complete</OPTION>
