--- a/src/main/webapp/subPages/heatMap/HeatMap.html
+++ b/src/main/webapp/subPages/heatMap/HeatMap.html
@@ -336,7 +336,7 @@
     <div id="page-wrapper" style="min-height: 731px;">
         <div class="row">
             <div class="col-lg-12">
-                <h3 class="page-header">Database Radar Charts</h3>
+                <h3 class="page-header">Heat Map Charts</h3>
                 <div class="pull-right">
                     <div class="btn-group">
                         <button type="button" class="btn btn-success" onclick="
